hphp/hack/test/typecheck/reserved_name30.php.exp
File "reserved_name30.php", line 5, characters 7-10:
Real cannot be used as it is reserved. (Naming[2068])
