hphp/hack/test/typecheck/reserved_name30.php
<?hh

namespace Foo;

class Real {}
